@@ -2019,6 +2019,8 @@
       (sb-pcl::%method-function
        ;; user's code is in the fast-function
        (cons fun (recurse (sb-pcl::%method-function-fast-function fun))))
+      (funcallable-instance
+       (list (%funcallable-instance-fun fun)))
       (function
        (list fun)))))
 
