@@ -3,6 +3,8 @@
 changes relative to sbcl-2.2.11:
   * enhancement: support for SLOT-VALUE and friends has been extended to
     structure and condition instances.
+  * minor incompatible change: compiled-function-p is false of
+    generic functions.
   * bug fix: type intersections of RATIONAL ranges with (NOT INTEGER) are
     computed more consistently.  (lp#1998008)
 
